<resources>
    <string name="app_name">BudgetControl</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="account">Account</string>
    <string name="balance">Balance</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete account?</string>
    <string name="budgets_associated_with_this_account">All budgets associated with this account will be deleted.</string>
    <string name="delete_budget">Delete budget?</string>
    <string name="select_a_date">Select a date</string>
    <string name="accounts">Accounts</string>
    <string name="no_accounts_created">No accounts created</string>
    <string name="no_budgets_created">No budgets created</string>
    <string name="required_field">Required field</string>
</resources>
